Closed Bug 1508225 Opened 7 years ago Closed 6 years ago

gfx/vr/gfxVRExternal.cpp:116: return value of 'GetSensorState' is a large (224 bytes) pass-by-value object

Categories

(Core :: WebVR, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox66 --- fixed

People

(Reporter: Sylvestre, Assigned: thomasmo)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

/var/lib/jenkins/workspace/firefox-clang-last/gfx/vr/gfxVRExternal.cpp:116:20: error: return value of 'GetSensorState' is a large (224 bytes) pass-by-value object; pass it by reference instead ? [-Werror,-Wlarge-by-value-copy] VRDisplayExternal::GetSensorState() ^
Blocks: 500864
Assignee: nobody → thomasmo
This is more details that I'll add later!
Attachment #9029065 - Flags: review?(kgilbert)
Attachment #9029065 - Flags: review?(dmajor)
Attachment #9029065 - Flags: review?(kgilbert) → review+
Attachment #9029065 - Attachment description: Bug 1508225 - Change return type to reference → Bug 1508225 - Change return type of VRDisplayExternal::GetSensorState to a reference
Attachment #9029065 - Flags: review?(dmajor) → checkin?(kgilbert)
Pushed by kgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2ea0e566487f Change return type of VRDisplayExternal::GetSensorState to a reference r=kip,dmajor
Attachment #9029065 - Flags: checkin?(kgilbert)
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: