Bug 1508225 - Change return type of VRDisplayExternal::GetSensorState to a reference r=kip,dmajor

This change fixes a compiler warning, where a VRSensorState object is returned on the stack as a rather large object.
To address this warning, the return type of VRDisplayExternal::GetSensorState now returns a const reference to the member. The rest of the change are updates to uphold the new constness.

Differential Revision: https://phabricator.services.mozilla.com/D13586